--- a/css/article_karoline.css
+++ b/css/article_karoline.css
@@ -24,8 +24,8 @@ body {
 .head-quote {
     font-family: 'roboto', sans-serif;
     font-style: italic;
-    margin-top: 210px;
-    margin-bottom: 210px;
+    margin-top: 100px;
+    margin-bottom: 100px;
     font-size: 25px;
 }
 
@@ -84,4 +84,23 @@ margin-bottom: 20px;
 .column-body-wrap {
     margin-top: 20px;
     width: 50%;
+}
+
+
+
+
+@media (max-width: 480px) {
+    .karoline-article-content {
+        flex-direction: column;
+        display: flex;
+    }
+
+    .column-body-wrap, .column-head-wrap {
+        width: 100%;
+    }
+
+    .article-wrapper {
+        padding: 10px;
+        margin: 5px 0;
+    }
 }
