--- a/css/index.css
+++ b/css/index.css
@@ -22,7 +22,7 @@ p {
     
     width: 100%;
     height: auto;
-    background-image: url('../img/forsidebillede.png');
+    background-image: url('../img/forsidebillede.webg.webp');
     background-size: cover;
     background-position: center;
     position: relative;
